update: general settings swagger and get method
